<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:background="@color/purple"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMensaje"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMostrar"
            android:onClick="onClickBtn"/>

        <Button
            android:id="@+id/btnLlamar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLlamar"
            android:onClick="onClickBtn"/>

        <Button
            android:id="@+id/btnLlamarCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLlamarCompat"
            android:onClick="onClickBtn"/>

        <Button
            android:id="@+id/btnMarcar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMarcar"
            android:onClick="onClickBtn"/>

        <Button
            android:id="@+id/btnSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSMS"
            android:onClick="onClickBtn"/>

        <Button
            android:id="@+id/btnAbrir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAbrir"
            android:onClick="onClickBtn"/>

        <Button
            android:id="@+id/btnMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMapa"
            android:onClick="onClickBtn"/>

        <Button
            android:id="@+id/btnOtraApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOtraApp"
            android:onClick="onClickBtn"/>

    </LinearLayout>

</LinearLayout>